--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equip-resources-basestyles",
-  "version": "0.1.0-beta.0",
+  "version": "0.1.0",
   "description": "Shared resources for component implementation.",
   "scripts": {},
   "engine": {
