--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "equip-resources-basestyles",
-  "version": "0.1.1-beta.0",
+  "version": "0.1.1-beta.1",
   "description": "Shared resources for component implementation.",
   "scripts": {},
-  "engine": {
-    "node": "> 9.1"
+  "engines": {
+    "node": ">=6.9.2",
+    "npm": ">=3.10.9"
   },
   "keywords": [
     "resources",
@@ -12,7 +13,7 @@
     "style"
   ],
   "author": "Jonathan Delgado <hi@jon.soy>",
-  "license": "MIT",
+  "license": "CC BY-SA 4.0",
   "dependencies": {
     "material-colors": "^1.2.0",
     "reset.css": "^2.0.2"
