--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "equip-resources-basestyles",
-  "version": "0.1.1-beta.3",
+  "version": "0.1.1-beta.4",
   "description": "Shared resources for component implementation.",
   "scripts": {},
+  "style": "css/basestyles.css",
   "engines": {
     "node": ">=6.9.2",
     "npm": ">=3.10.9"
@@ -31,6 +32,10 @@
     "gulp-postcss": "^6.2.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-inline-svg": "^2.3.0",
-    "precss": "^1.4.0"
+    "precss": "^1.4.0",
+    "stylelint-config-standard": "^15.0.0"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   }
 }
