--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equip-resources-basestyles",
-  "version": "0.1.1-beta.5",
+  "version": "0.1.1-beta.6",
   "description": "Shared resources for component implementation.",
   "scripts": {},
   "style": "css/basestyles.css",
@@ -17,6 +17,8 @@
   "license": "CC BY-SA 4.0",
   "dependencies": {
     "material-colors": "^1.2.0",
+    "postcss": "^5.2.6",
+    "postcss-functions": "^2.1.1",
     "reset.css": "^2.0.2"
   },
   "bugs": {
